Fix action-bar styles on mobile

--- a/public/sass/action-bar.scss
+++ b/public/sass/action-bar.scss
@@ -4,6 +4,8 @@ $size-critere: 5em;
 
 $sidebar-margin: 0;
 
+$breakpoint: 737px;
+
 .action-bar {
     align-items: flex-start;
     display: flex;
@@ -40,10 +42,23 @@ $sidebar-margin: 0;
 
 .action-bar.mod-criteres {
     right: -$sidebar-margin - 100em;
+
+    @media only screen and (max-width: $breakpoint) {
+        flex-direction: row;
+        height: auto;
+        overflow-x: scroll;
+        right: 0;
+        top: -10em;
+        width: 100%;
+    }
 }
 
 .action-bar.mod-criteres.mod-open {
     right: $sidebar-margin;
+
+    @media only screen and (max-width: $breakpoint) {
+        top: 0;
+    }
 }
 
 .action-bar.mod-planets {
@@ -61,6 +76,12 @@ $sidebar-margin: 0;
     flex: 0;
     list-style: none;
     padding: 1em 0;
+
+    @media only screen and (max-width: $breakpoint) {
+        display: flex;
+        margin: 0;
+        padding: 0 1em;
+    }
 }
 
 .action-bar-container.mod-planets {
@@ -89,13 +110,17 @@ $sidebar-margin: 0;
     }
 
     .action-bar-element:first-child {
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
+        @media only screen and (min-width: $breakpoint + 1px) {
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+        }
     }
 
     .action-bar-element:last-child {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
+        @media only screen and (min-width: $breakpoint + 1px) {
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
     }
 
     .action-bar-element.mod-criteres::before {
@@ -117,7 +142,9 @@ $sidebar-margin: 0;
     }
 
     .action-bar-element:hover::before {
-        display: block;
+        @media only screen and (min-width: $breakpoint + 1px) {
+            display: block;
+        }
     }
 
 .criteres-image {
@@ -137,15 +164,3 @@ $sidebar-margin: 0;
 }
 
 
-@media only screen and (max-width: 737px) {
-    .action-bar.mod-criteres.mod-open {
-        flex-direction: row;
-        right: 0;
-        top: 0;
-        width: 100%;
-    }
-
-    .action-bar-container {
-        display: flex;
-    }
-}
